# feecc-agent-morsvyaz

./: .flake8  .gitignore  .pre-commit-config.yaml  Agent.py  Dockerfile  Dockerfile-arm  Dockerfile-multiplatform  Dockerfile-quick  Employee.py  Hub.py  Makefile  Passport.py  README.md  State.py  Unit.py  WorkBench.py  app.py  docker-compose.yml  employee_db.csv  feecc-hub-daemon.service  install.py  matching_table.csv  mypy.ini  pyproject.toml  requirements.txt  test_api.py  uninstall.py
.github/workflows/: Deploy-in-dev-k8s.yml  Deploy-in-master-k8s.yml  add-release.yml  docker-image-build-and-push.yml  pre-commit.yml  python-app-checks.yml  python-app.yml
config/: camera_table.csv  config.yaml  employee_db.csv  hub_config.yaml  internal_ids.csv
docs/: README.md
feecc_hub/: Employee.py  Hub.py  Unit.py  WorkBench.py  _Agent.py  _Barcode.py  _Camera.py  _Employee.py  _Passport.py  _Printer.py  _State.py  _Types.py  _VideoEditor.py  _external_io_operations.py  _image_generation.py  _short_url_generator.py  database.py  exceptions.py  models.py
feecc_hub_src/: _logging.py  app.py  dependencies.py
feecc_hub_src/config/: config.yaml  hub_config.yaml  workbench_config.yaml
feecc_hub_src/feecc_hub/: Camera.py  Config.py  Employee.py  Hub.py  IO_gateway.py  Singleton.py  Types.py  Unit.py  WorkBench.py  _Agent.py  _Barcode.py  _Camera.py  _Passport.py  _Printer.py  _State.py  _Types.py  _VideoEditor.py  _external_io_operations.py  _image_generation.py  _short_url_generator.py  config.py  config_models.py  database.py  exceptions.py  models.py  states.py  utils.py
feecc_hub_src/tests/: test_database.py
modules/: Agent.py  Barcode.py  Camera.py  Employee.py  Hub.py  Passport.py  Printer.py  State.py  Unit.py  VideoEditor.py  WorkBench.py  external_io_operations.py  factory.py  image_generation.py  send_to_ipfs.py  short_url_generator.py
src/: _employee_router.py  _logging.py  _unit_router.py  _workbench_router.py  app.py  config.py  dependencies.py
src/config/: config.yaml
src/database/: _db_utils.py  database.py  models.py
src/employee/: Employee.py  employee_wrapper.py
src/feecc_workbench/: Camera.py  Employee.py  IO_gateway.py  Messenger.py  ProductionStage.py  Types.py  Unit.py  WorkBench.py  _Barcode.py  _db_utils.py  _image_generation.py  _label_generation.py  _short_url_generator.py  certificate_generator.py  config.py  config_models.py  database.py  exceptions.py  ipfs.py  message_lang.csv  metrics.py  models.py  passport_generator.py  printer.py  rabbit_queue.py  robonomics.py  states.py  translation.py  unit_utils.py  utils.py
src/prod_schema/: prod_schema_wrapper.py
src/prod_stage/: ProductionStage.py  prod_stage_wrapper.py
src/routers/: __init__.py  _employee_router.py  _unit_router.py  _workbench_router.py  employee_router.py  unit_router.py  workbench_router.py
src/unit/: Unit.py  UnitManager.py  unit_utils.py  unit_wrapper.py
tests/: conftest.py  test_api.py  test_database.py  test_short_url_generator.py
