[tool.poetry]
name = "Feecc-Workbench-Daemon"
version = "1.1.7"
description = "Workbench software for the Feecc QA system"
authors = ["arseniiarsenii <arseniivelichko2@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Pillow = "^8.2.0"
PyYAML = "^5.4.1"
brother-ql = "^0.9.4"
qrcode = "^6.1"
python-barcode = "^0.13.1"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
dnspython = "^2.1.0"
loguru = "^0.5.3"
motor = "^2.5.1"
httpx = "^0.19.0"
robonomics-interface = "^0.5.2"
environ-config = "^22.1.0"
yarl = "^1.7.2"
websockets = "^10.3"

[tool.poetry.dev-dependencies]
mypy = "^0.902"
black = "^21.6b0"
flake8 = "^3.9.2"
types-PyYAML = "^5.4.3"
types-requests = "^2.25.0"
pytest = "^6.2.4"
vulture = "^2.3"
pre-commit = "^2.15.0"
pytest-cov = "^3.0.0"
ssort = "^0.11.5"

[tool.pytest.ini_options]
markers = ["short_url"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "test*"
strict = true
ignore_missing_imports  = true
allow_untyped_decorators = true

[tool.black]
line-length = 120
