[tool.poetry]
name = "Feecc-Workbench-Daemon"
version = "1.2.0"
description = "Workbench software for the Feecc QA system"
authors = ["arseniiarsenii <arseniivelichko2@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Pillow = "^9.1.1"
PyYAML = "^6.0"
brother-ql = "^0.9.4"
qrcode = "^7.3.1"
python-barcode = "^0.14.0"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
dnspython = "^2.2.1"
loguru = "^0.6.0"
motor = "^3.0.0"
httpx = "^0.23.0"
environ-config = "^22.1.0"
yarl = "^1.7.2"
sse-starlette = "^0.10.3"
python-dotenv = "^0.20.0"
robonomics-interface = "^1.0.3"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
flake8 = "^4.0.1"
types-PyYAML = "^6.0.7"
types-requests = "^2.27.29"
pytest = "^7.1.2"
vulture = "^2.4"
pre-commit = "^2.19.0"
pytest-cov = "^3.0.0"
ssort = "^0.11.5"
black = {extras = ["d"], version = "^22.3.0"}
flake8-new-union-types = "^0.4.1"
flake8-pep585 = "^0.1.5.1"
pyupgrade = "^2.32.1"
isort = "^5.10.1"
poetryup = "^0.7.1"

[tool.pytest.ini_options]
markers = ["short_url"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "test*"
strict = true
ignore_missing_imports  = true
allow_untyped_decorators = true
implicit_reexport = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
